welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:2: error: ')' expected but '}' found.
def allerJB() {while ((!estFaceBiscuit()) && (!estFaceMur()) {avance()}}
                                                                       ^